# wgpu-playground

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yaml  index.html  nginx.conf  rust-toolchain.old  worker.js
.cargo/: config.toml
res/: environment.wgsl  equirect.wgsl  hdr.wgsl  irradiance.wgsl  light.wgsl  pc_shader.wgsl  shader.wgsl
src/: app.rs  asset.rs  binary.rs  camera.rs  component.rs  context.rs  dialog.rs  entity.rs  error.rs  instance.rs  lib.rs  light.rs  main.rs  material.rs  mesh.rs  model.rs  pointcloud.rs  renderer.rs  scene.rs  state.rs  surface.rs  texture.rs  transform.rs  ui.rs  vertex.rs  worker.rs
src/renderer/: asset.rs  backend.rs  camera.rs  component.rs  context.rs  core.rs  environment.rs  hdr.rs  instance.rs  light.rs  material.rs  mesh.rs  pipeline.rs  pointcloud.rs  scene.rs  surface.rs  texture.rs  transform.rs  ui.rs  vertex.rs  worker.rs
