[package]
name = "wgpu-web"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"

[dependencies]
anyhow = "1.0.99"
bytemuck = "1.23.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
egui = "0.32.3"
env_logger = "0.11.8"
futures-lite = "2.6.1"
glam = { version = "0.30.5", features = ["serde"] }
gltf = "1.4.1"
image = "0.25.8"
instant = "0.1.13"
las = { version = "0.9.6", features = ["laz"] }
log = "0.4.28"
reqwest = "0.12.23"
rfd = { version = "0.15.4", features = ["file-handle-inner"] }
serde = "1.0.226"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["rng-getrandom", "v4"] }
wgpu = "^25"
winit = "0.30.12"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
egui-wgpu = { version = "0.32.3", features = ["winit", "wayland", "x11"] }
egui-winit = { version = "0.32.3" }
naga = { version = "26.0.0", features = ["termcolor"] }
tobj = { version = "4.0.3", features = ["async", "futures"] }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
egui-wgpu = { version = "0.32.3", features = ["winit"] }
egui-winit = { version = "0.32.3", default-features = false, features = ["bytemuck", "links"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"]}
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
js-sys = "0.3.80"
serde-wasm-bindgen = "0.6.5"
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
wgpu = { version = "^25", features = ["webgpu"]}
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.51"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Worker",
    "WorkerType",
    "WorkerOptions",    
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "ReadableStreamDefaultReader",
]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-threads", "--enable-simd", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
